@@ -1862,14 +1862,15 @@ armor stands, and in containers.</p>
 <div class="note">
 <p class="first admonition-title">Note</p>
 <p>In order to actually be used, weapon racks have to be patched and
-assigned to a squad. See documentation for <tt class="docutils literal"><span class="pre">gui/assign-rack</span></tt> below.</p>
+manually assigned to a squad. See documentation for <tt class="docutils literal"><span class="pre">gui/assign-rack</span></tt>
+below.</p>
 <p class="last">Also, the default capacity of armor stands is way too low, so check out
 <a class="reference external" href="http://www.bay12games.com/dwarves/mantisbt/view.php?id=1445">http://www.bay12games.com/dwarves/mantisbt/view.php?id=1445</a>
 for a patch addressing that too.</p>
 </div>
 <p>Note that the buildings in the armory are used as follows:</p>
 <ul class="simple">
-<li>Weapon racks when fixed are used to store any assigned weapons.
+<li>Weapon racks (when patched) are used to store any assigned weapons.
 Each rack belongs to a specific squad, and can store up to 5 weapons.</li>
 <li>Armor stands belong to specific squad members and are used for
 armor and shields. By default one stand can store one item of each
@@ -1878,11 +1879,9 @@ which should be sufficient.</li>
 <li>Cabinets are used to store assigned clothing for a specific squad member.
 They are <strong>never</strong> used to store owned clothing.</li>
 <li>Chests (boxes, etc) are used for a flask, backpack or quiver assigned
-to the squad member. Due to a bug, food is dropped out of the backpack
-when it is stored.</li>
+to the squad member. Due to a probable bug, food is dropped out of the
+backpack when it is stored.</li>
 </ul>
-<p>Contrary to the common misconception, all these uses are controlled by the
-<em>Individual Equipment</em> usage flag; the Squad Equipment mode means nothing.</p>
 <div class="warning">
 <p class="first admonition-title">Warning</p>
 <p class="last">Although armor stands, cabinets and chests properly belong only to one
@@ -1890,6 +1889,21 @@ squad member, the owner of the building used to create the barracks will
 randomly use any containers inside the room. Thus, it is recommended to
 always create the armory from a weapon rack.</p>
 </div>
+<p>Contrary to the common misconception, all these uses are controlled by the
+<em>Individual Equipment</em> usage flag. The <em>Squad Equipment</em> flag is actually
+intended for ammo, but the game does even less in that area than for armor
+and weapons. This plugin implements the following rules almost from scratch:</p>
+<ul class="simple">
+<li>Combat ammo is stored in chests inside rooms with Squad Equipment enabled.</li>
+<li>If a chest is assigned to a squad member due to Individual Equipment also
+being set, it is only used for that squad's ammo; otherwise, any squads
+with Squad Equipment on the room will use all of the chests at random.</li>
+<li>Training ammo is stored in chests inside archery ranges designated from
+archery targets, and controlled by the same Train flag as archery training
+itself. This is inspired by some defunct code for weapon racks.</li>
+</ul>
+<p>There are some minor traces in the game code to suggest that the first of
+these rules is intended by Toady; the rest are invented by this plugin.</p>
 </div>
 </div>
 <div class="section" id="mode-switch-and-reclaim">
