@@ -1084,7 +1084,8 @@ armor stands, and in containers.
 .. note::
 
   In order to actually be used, weapon racks have to be patched and
-  assigned to a squad. See documentation for ``gui/assign-rack`` below.
+  manually assigned to a squad. See documentation for ``gui/assign-rack``
+  below.
 
   Also, the default capacity of armor stands is way too low, so check out
   http://www.bay12games.com/dwarves/mantisbt/view.php?id=1445
@@ -1092,7 +1093,7 @@ armor stands, and in containers.
 
 Note that the buildings in the armory are used as follows:
 
-* Weapon racks when fixed are used to store any assigned weapons.
+* Weapon racks (when patched) are used to store any assigned weapons.
   Each rack belongs to a specific squad, and can store up to 5 weapons.
 
 * Armor stands belong to specific squad members and are used for
@@ -1104,11 +1105,8 @@ Note that the buildings in the armory are used as follows:
   They are **never** used to store owned clothing.
 
 * Chests (boxes, etc) are used for a flask, backpack or quiver assigned
-  to the squad member. Due to a bug, food is dropped out of the backpack
-  when it is stored.
-
-Contrary to the common misconception, all these uses are controlled by the
-*Individual Equipment* usage flag; the Squad Equipment mode means nothing.
+  to the squad member. Due to a probable bug, food is dropped out of the
+  backpack when it is stored.
 
 .. warning::
 
@@ -1116,6 +1114,24 @@ Contrary to the common misconception, all these uses are controlled by the
   squad member, the owner of the building used to create the barracks will
   randomly use any containers inside the room. Thus, it is recommended to
   always create the armory from a weapon rack.
+
+Contrary to the common misconception, all these uses are controlled by the
+*Individual Equipment* usage flag. The *Squad Equipment* flag is actually
+intended for ammo, but the game does even less in that area than for armor
+and weapons. This plugin implements the following rules almost from scratch:
+
+* Combat ammo is stored in chests inside rooms with Squad Equipment enabled.
+
+* If a chest is assigned to a squad member due to Individual Equipment also
+  being set, it is only used for that squad's ammo; otherwise, any squads
+  with Squad Equipment on the room will use all of the chests at random.
+
+* Training ammo is stored in chests inside archery ranges designated from
+  archery targets, and controlled by the same Train flag as archery training
+  itself. This is inspired by some defunct code for weapon racks.
+
+There are some minor traces in the game code to suggest that the first of
+these rules is intended by Toady; the rest are invented by this plugin.
 
 
 Mode switch and reclaim
