@@ -10,8 +10,6 @@ DFHack future
     - fastdwarf: new mode using debug flags, and some internal consistency fixes.
     - added a small stand-alone utility for applying and removing binary patches.
     - removebadthoughts: add --dry-run option
-  New commands:
-    - fix-armory: activates a plugin that makes armor stands and weapon racks be used again.
   New GUI scripts:
     - gui/guide-path: displays the cached path for minecart Guide orders.
     - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
@@ -21,6 +19,10 @@ DFHack future
     - properly considers minecarts assigned to routes busy.
     - code for deducing job outputs rewritten in lua for flexibility.
     - logic fix: collecting webs produces silk, and ungathered webs are not thread.
+  New Fix Armory plugin:
+    Together with a couple of binary patches and the gui/assign-rack script,
+    this plugin makes weapon racks, armor stands, chests and cabinets in
+    properly designated barracks be used again for storage of squad equipment.
 
 DFHack v0.34.11-r2
 
